// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Panel > renders its children 1`] = `
<div>
  <div
    active="false"
  >
    <div
      id="test"
    >
      test
    </div>
  </div>
</div>
`;

exports[`renders > its children 1`] = `
<div>
  <div
    active="false"
  >
    <div
      id="test"
    >
      test
    </div>
  </div>
</div>
`;

exports[`renders its children 1`] = `
<div>
  <div>
    <div
      id="test"
    >
      test
    </div>
  </div>
</div>
`;
